# mediaElection27

./: .env.example  .gitignore  CHECKPOINT-2026-05-17.md  Makefile  README.md  alembic.ini  cheatsheet_sql.md  docker-compose.yml  pyproject.toml  schema_db.md
.github/workflows/: ci.yml  deploy.yml
app/: config.py
app/api/: deps.py  main.py  mangum_handler.py
app/api/routers/: articles.py  candidates.py  meta.py  sources.py  timeseries.py
app/db/: engine.py  models.py
app/db/migrations/: env.py
app/extract/: base.py  keyword.py  run.py
app/ingest/: dedup.py  fetcher.py  lambda_handler.py  loader_handler.py  parser.py  run.py
app/models/: article.py  candidate.py  source.py  timeseries.py
app/sources/: seed.py
dev/: CHECKPOINT-2026-05-15.md  MENTAL-MODELS.md  PLAN-v1.md  SPECIFICATION-REBUILD.md  cheatsheet_sql.md
frontend/: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/api/: articles.ts  candidates.ts  client.ts  sources.ts  timeseries.ts
frontend/src/components/: ArticlesTable.tsx  CandidateFilter.tsx  DateRangeFilter.tsx  Layout.tsx  LeaderboardTable.tsx  ShareOfVoiceChart.tsx  SourceFilter.tsx  Sparkline.tsx  Spinner.tsx  Stats.tsx  (+1 more)
infra/cdk/: app.py  cdk.context.json  cdk.json
infra/lambda_layer/: requirements-lambda.txt
scripts/: cron_ingest.sh  media27.cron
seeds/: candidates.yaml  sources.yaml
tests/integration/: conftest.py  test_api_smoke.py
tests/unit/: test_keyword.py
(+18 files in other folders)
